[metadata]
name = rubiks_dqn
version = 0.0.1
author = Ayden Khalil
author_email = aydenkhalil619@gmail.com
description = DQN for rubiks cube
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AydenZK/rubiks_dqn
project_urls =
    Bug Tracker = https://github.com/AydenZK/rubiks_dqn/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src